--- a/sol-1_ReadFromNetwork/package.json
+++ b/sol-1_ReadFromNetwork/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2"
   }
 }
